force-app/main/default/objects/Vacancies__c/Vacancies__c.object-meta.xml
<CustomObject>
    <label>Vacancy</label>
    <nameField>
        <label>Vacancy Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vacancies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>