force-app/main/default/objects/Vacancies__c/fields/Hiring_manager__c.field-meta.xml
<CustomField>
    <fullName>Hiring_manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hiring Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vacancies</relationshipLabel>
    <relationshipName>Vacancies</relationshipName>
    <type>Lookup</type>
</CustomField>