force-app/main/default/objects/Vacancies__c/fields/Internal_Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Internal_Job_Description__c</fullName>
    <label>Internal Job Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>