force-app/main/default/objects/Vacancies__c/fields/Job_Summary__c.field-meta.xml
<CustomField>
    <fullName>Job_Summary__c</fullName>
    <label>Job Summary</label>
    <type>TextArea</type>
</CustomField>