force-app/main/default/objects/Vacancies__c/fields/Revenue_Per_Vacancy__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Per_Vacancy__c</fullName>
    <label>Revenue % Per Vacancy</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>