force-app/main/default/objects/Vacancies__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Expected Start Date</label>
    <type>Date</type>
</CustomField>