force-app/main/default/objects/Vacancies__c/fields/Vacancy_Address__c.field-meta.xml
<CustomField>
    <fullName>Vacancy_Address__c</fullName>
    <label>Vacancy Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>