force-app/main/default/objects/Vacancies__c/fields/Vacancy_Description__c.field-meta.xml
<CustomField>
    <fullName>Vacancy_Description__c</fullName>
    <label>Vacancy Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>